--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scal=.10">
+    <meta name="viewport" content="width=device-width, initial-scale=.10">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="style.css" />
     <title>>PaintJs</title>
@@ -20,15 +20,15 @@
         </div>
 
         <div class="controls__colors" id="jsColors">
-            <div class="controls__color" style="background-color: #2c2c2c;"></div>
-            <div class="controls__color" style="background-color: white;"></div>
-            <div class="controls__color" style="background-color: #FF3B30;"></div>
-            <div class="controls__color" style="background-color: #FF9500;"></div>
-            <div class="controls__color" style="background-color: #FFCC00;"></div>
-            <div class="controls__color" style="background-color: #4CD963;"></div>
-            <div class="controls__color" style="background-color: #5AC8FA;"></div>
-            <div class="controls__color" style="background-color: #0579FF;"></div>
-            <div class="controls__color" style="background-color: #5856D6;"></div>
+            <div class="controls__color jsColor" style="background-color: #2c2c2c;"></div>
+            <div class="controls__color jsColor" style="background-color: white;"></div>
+            <div class="controls__color jsColor" style="background-color: #FF3B30;"></div>
+            <div class="controls__color jsColor" style="background-color: #FF9500;"></div>
+            <div class="controls__color jsColor" style="background-color: #FFCC00;"></div>
+            <div class="controls__color jsColor" style="background-color: #4CD963;"></div>
+            <div class="controls__color jsColor" style="background-color: #5AC8FA;"></div>
+            <div class="controls__color jsColor" style="background-color: #0579FF;"></div>
+            <div class="controls__color jsColor" style="background-color: #5856D6;"></div>
         </div>
 
     </div>
