add brush, clear btn

--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
         </div>
         <div class="controls__btns">
             <button id="jsMode">Fill</button>
+            <button id="jsBrush">Brush</button>
+            <button id="jsClear">Clear</button>
             <button id="jsSave">Save</button>
         </div>
 
