--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
             <input type="range" name="" id="jsRange" min="0.1" max="5.0" value="2.5" step="0.1"/>
         </div>
         <div class="controls__btns">
-            <button id="jsMode">Fill</button>
+            <button id="jsFill">Fill</button>
+            <button id="jsPaint">Paint</button>
             <button id="jsBrush">Brush</button>
             <button id="jsClear">Clear</button>
             <button id="jsSave">Save</button>
