--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                 <ul>
                     <li><a href="" class="link">About</a></li>
                     <li><a href="./createDraw.html" class="link">Board</a></li>
-                    <li><a href="" class="link">Talk</a></li>
+                    <li><a href="./talk.html" class="link">Talk</a></li>
                   </ul>
             </nav>
         </div>
