--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <header><a class='link' href=index.html>Drawing</a></header>
             <nav>
                 <ul>
-                    <li><a href="" class="link">About</a></li>
+                    <li><a href="./about.html" class="link">About</a></li>
                     <li><a href="./createDraw.html" class="link">Board</a></li>
                     <li><a href="./talk.html" class="link">Talk</a></li>
                   </ul>
