modify header, nav, login form
float:left, display:flex방식으로 일자로 나열했을 때, 한글버튼이 있으면
input상자와 정렬이 불일치됨.
근본적인 원인은 모름.

--- a/index.html
+++ b/index.html
@@ -11,21 +11,24 @@
 <body>
     <div class="container">
         <div class="content fixedHead">
-            <header><a class='link' href=index.html>Drawing</a></header>
+            <header>
+                <a class='link' href=index.html>Drawing</a>
+            </header>
             <nav>
                 <ul>
                     <li><a href="./about.html" class="link">About</a></li>
                     <li><a href="./createDraw.html" class="link">Board</a></li>
                     <li><a href="./talk.html" class="link">Talk</a></li>
                   </ul>
-            </nav>
+            </nav>  
         </div>
         <div class="fixedHead under">
             <form action="">
                 <input type="text" placeholder="id">
                 <input type="password" placeholder="password">
-                <button>로그인</button>
-                <button>회원가입</button>
+                
+                <button class="loginBtn" >Login</button>
+                <button class="loginBtn">Sign Up</button> 
             </form>
         </div>
         
