--- a/talk.html
+++ b/talk.html
@@ -25,8 +25,9 @@
             <form action="">
                 <input type="text" placeholder="id">
                 <input type="password" placeholder="password">
-                <button>로그인</button>
-                <button>회원가입</button>
+                
+                <button class="loginBtn" >Login</button>
+                <button class="loginBtn">Sign Up</button> 
             </form>
         </div>
         
