--- a/talk.html
+++ b/talk.html
@@ -116,7 +116,8 @@
                             <td class="tableMargin">12</td>
                         </tr>
                     </table>
-                    <div class="btnRight btnMagin"><button>
+                    <div class="btnRight btnMagin">
+                        <button>
                         글쓰기
                     </button></div>
                     <div class="page btnCenter">
