modify login form
input태그에 한글 입력 시, form위치가 변경되는 현상발생함.
수직정렬(vertical-align)을 통해 부모요소에 맞게 정렬시킴.
(정확한 원인은 font한글, 영문의 height차이임)

--- a/talk.html
+++ b/talk.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="ko">
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -23,9 +23,10 @@
         </div>
         <div class="fixedHead under">
             <form action="">
-                <input type="text" placeholder="id">
-                <input type="password" placeholder="password">
-                
+                <input type="text" placeholder="id" id='id'>
+
+                <input type="password" placeholder="password" id='password'>
+                                
                 <button class="loginBtn" >Login</button>
                 <button class="loginBtn">Sign Up</button> 
             </form>
