--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@
     <link rel="stylesheet" href="./mainLayout.css" />
     <title>>share Drawing</title>
     <style>
+        /* login, register form css */
         .displayRegister{
-            display: none;
+            /* display: none; */
         }
         .backSignUp{
             background-color: dimgrey;
@@ -41,17 +42,18 @@
             
         }
         .signUp label{
+            width:10px;
             padding: 5px;
-
         }
         .signUp input{
-            height: 20px;
-            margin-left: 20px;
+            width:150px;
         }
-        .signUp input[type='email']{
+        .signUp #useremail{
             width:80px;
-            height: 20px;
-            margin-left: 20px;
+        }
+        .signUp select{
+            width: 70px;
+            margin-left: 8px;
         }
         .signUp button{
             height: 28px;
@@ -68,6 +70,7 @@
         }
         form table td{
             padding: 3px;
+            max-width: 200px;
             vertical-align: middle;
         }
         
@@ -131,28 +134,37 @@
                 <table>
                     <tbody>
                         <tr>
-                            <td><label for="">아이디</label></td>
-                            <td><input type="text"></td>
+                            <td><label for="userid">아이디</label></td>
+                            <td><input type="text" id="userid"></td>
                             <td><button>중복확인</button></td>                        
                         </tr>
                         <tr>
-                            <td><label for="">비밀번호</label></td>
-                            <td><input type="password"></td>
+                            <td><label for="password">비밀번호</label></td>
+                            <td><input type="password" id="password"></td>
                             <td></td>                        
                         </tr>
                         <tr>
-                            <td><label for="">비번확인</label></td>
-                            <td><input type="password"></td>
+                            <td><label for="pwdRe">비번확인</label></td>
+                            <td><input type="password" id="pwdRe"></td>
                             <td></td>                        
                         </tr>
                         <tr>
-                            <td> <label for="">닉네임</label></td>
-                            <td><input type="text"></td>
+                            <td> <label for="usernick">닉네임</label></td>
+                            <td><input type="text" id="usernick"></td>
                             <td><button>중복확인</button></td>                        
                         </tr>
                         <tr>
-                            <td> <label for="">이메일</label></td>
-                            <td><input type="email">@ 불라불라.com</td>
+                            <td> <label for="useremail">이메일</label></td>
+                            <td>
+                                <input type="text" id="useremail"> @
+                                <select name="" id="">
+                                    <option value="" default>naver.com</option>
+                                    <option value="">daum.net</option>
+                                    <option value="">gmail.com</option>
+                                    <option value="">nate.com</option>
+                                    <option value="">직접입력</option>
+                                </select>
+                            </td>
                             <td><button>인증받기</button></td>                        
                         </tr>
                     </tbody>
