move dir structure

--- a/public/createDraw.html
+++ b/public/createDraw.html
@@ -15,7 +15,7 @@
             <nav>
                 <ul>
                     <li><a href="./about.html" class="link">About</a></li>
-                    <li><a href="./createDraw.html" class="link">Board</a></li>
+                    <li><a href="./board.html" class="link">Board</a></li>
                     <li><a href="./talk.html" class="link">Talk</a></li>
                   </ul>
             </nav>
