--- a/public/index.html
+++ b/public/index.html
@@ -93,19 +93,18 @@
     <div class="container">
         <div class="content fixedHead">
             <header>
-                <a class='link' href=index.html>Drawing</a>
+                <a class='link' href=''>Drawing</a>
             </header>
             <nav>
                 <ul>
                     <li><a href="./about.html" class="link">About</a></li>
-                    <li><a href="./createDraw.html" class="link">Board</a></li>
+                    <li><a href="./board.html" class="link">Board</a></li>
                     <li><a href="./talk.html" class="link">Talk</a></li>
                   </ul>
             </nav>  
         </div>
         <div class="fixedHead under">
-            <script>
-            </script>
+
             <form action="">
                 <input type="text" placeholder="id">
                 <input type="password" placeholder="password">
