--- a/public/about.html
+++ b/public/about.html
@@ -63,7 +63,7 @@
             <main>
                 <h1>About</h1>
                 <div class="fixedboxing">
-                    <img class="cssImg"src="./img/aboutImg.jpg" alt="">   
+                    <img class="cssImg"src="./public/img/aboutImg.jpg" alt="">   
                 </div>
                 
                 <p>
@@ -88,6 +88,5 @@
             Inquire : ckdfo1995@gmail.com</footer>
     </div>
 
-    <script src="app.js"></script>
 </body>
 </html>
