--- a/public/board.html
+++ b/public/board.html
@@ -72,7 +72,7 @@
                 <div class='boardContainer'>
                     <div class='boxSize'>
                         <div class="imgLimit">
-                            <img class='imgConfig'src="img/aboutImg.jpg" alt="">
+                            <img class='imgConfig'src="public/img/aboutImg.jpg" alt="">
                         </div>
                         <div class="widthFull">태그</div>
                         <div class="widthFull">조회수</div>
@@ -81,7 +81,7 @@
                     </div>
                     <div class='boxSize'>
                         <div class="imgLimit">
-                            <img class='imgConfig'src="img/aboutImg.jpg" alt="">
+                            <img class='imgConfig'src="public/img/aboutImg.jpg" alt="">
                         </div>
                         <div class="widthFull">태그</div>
                         <div class="widthFull">조회수</div>
@@ -90,7 +90,7 @@
                     </div>
                     <div class='boxSize'>
                         <div class="imgLimit">
-                            <img class='imgConfig'src="img/aboutImg.jpg" alt="">
+                            <img class='imgConfig'src="public/img/aboutImg.jpg" alt="">
                         </div>
                         <div class="widthFull">태그</div>
                         <div class="widthFull">조회수</div>
@@ -99,7 +99,7 @@
                     </div>
                     <div class='boxSize'>
                         <div class="imgLimit">
-                            <img class='imgConfig'src="img/aboutImg.jpg" alt="">
+                            <img class='imgConfig'src="public/img/aboutImg.jpg" alt="">
                         </div>
                         <div class="widthFull">태그</div>
                         <div class="widthFull">조회수</div>
@@ -108,7 +108,7 @@
                     </div>
                     <div class='boxSize'>
                         <div class="imgLimit">
-                            <img class='imgConfig'src="img/aboutImg.jpg" alt="">
+                            <img class='imgConfig'src="public/img/aboutImg.jpg" alt="">
                         </div>
                         <div class="widthFull">태그</div>
                         <div class="widthFull">조회수</div>
@@ -117,7 +117,7 @@
                     </div>
                     <div class='boxSize'>
                         <div class="imgLimit">
-                            <img class='imgConfig'src="img/aboutImg.jpg" alt="">
+                            <img class='imgConfig'src="public/img/aboutImg.jpg" alt="">
                         </div>
                         <div class="widthFull">태그</div>
                         <div class="widthFull">조회수</div>
@@ -127,7 +127,7 @@
  
                     <div class='boxSize'>
                         <div class="imgLimit">
-                            <img class='imgConfig'src="img/aboutImg.jpg" alt="">
+                            <img class='imgConfig'src="public/img/aboutImg.jpg" alt="">
                         </div>
                         <div class="widthFull">태그</div>
                         <div class="widthFull">조회수</div>
@@ -136,7 +136,7 @@
                     </div>
                     <div class='boxSize'>
                         <div class="imgLimit">
-                            <img class='imgConfig'src="img/aboutImg.jpg" alt="">
+                            <img class='imgConfig'src="public/img/aboutImg.jpg" alt="">
                         </div>
                         <div class="widthFull">태그</div>
                         <div class="widthFull">조회수</div>
@@ -145,7 +145,7 @@
                     </div>
                     <div class='boxSize'>
                         <div class="imgLimit">
-                            <img class='imgConfig'src="img/aboutImg.jpg" alt="">
+                            <img class='imgConfig'src="public/img/aboutImg.jpg" alt="">
                         </div>
                         <div class="widthFull">태그</div>
                         <div class="widthFull">조회수</div>
@@ -154,7 +154,7 @@
                     </div>
                     <div class='boxSize'>
                         <div class="imgLimit">
-                            <img class='imgConfig'src="img/aboutImg.jpg" alt="">
+                            <img class='imgConfig'src="public/img/aboutImg.jpg" alt="">
                         </div>
                         <div class="widthFull">태그</div>
                         <div class="widthFull">조회수</div>
@@ -163,7 +163,7 @@
                     </div>
                     <div class='boxSize'>
                         <div class="imgLimit">
-                            <img class='imgConfig'src="img/aboutImg.jpg" alt="">
+                            <img class='imgConfig'src="public/img/aboutImg.jpg" alt="">
                         </div>
                         <div class="widthFull">태그</div>
                         <div class="widthFull">조회수</div>
@@ -172,7 +172,7 @@
                     </div>
                     <div class='boxSize'>
                         <div class="imgLimit">
-                            <img class='imgConfig'src="img/aboutImg.jpg" alt="">
+                            <img class='imgConfig'src="public/img/aboutImg.jpg" alt="">
                         </div>
                         <div class="widthFull">태그</div>
                         <div class="widthFull">조회수</div>
@@ -205,6 +205,5 @@
             Inquire : ckdfo1995@gmail.com</footer>
     </div>
 
-    <script src="app.js"></script>
 </body>
 </html>
