--- a/public/createDraw.html
+++ b/public/createDraw.html
@@ -70,6 +70,6 @@
             Inquire : ckdfo1995@gmail.com</footer>
     </div>
 
-    <script src="app.js"></script>
+    <script src="./canvasDraw.js"></script>
 </body>
 </html>
