migration node->express.js

--- a/public/aboutMain.html
+++ b/public/aboutMain.html
@@ -1,6 +1,6 @@
 <h1>About</h1>
 <div class="fixedboxing">
-    <img class="cssImg"src="./public/img/aboutImg.jpg" alt="">   
+    <img class="cssImg"src="/img/aboutImg.jpg" alt="">   
 </div>
 
 <p>
