--- a/public/boardMain.html
+++ b/public/boardMain.html
@@ -1,7 +1,7 @@
 <div class='boardContainer'>
     <div class='boxSize'>
         <div class="imgLimit">
-            <img class='imgConfig'src="public/img/aboutImg.jpg" alt="">
+            <img class='imgConfig'src="/img/aboutImg.jpg" alt="">
         </div>
         <div class="widthFull">태그</div>
         <div class="widthFull">조회수</div>
@@ -10,7 +10,7 @@
     </div>
     <div class='boxSize'>
         <div class="imgLimit">
-            <img class='imgConfig'src="public/img/aboutImg.jpg" alt="">
+            <img class='imgConfig'src="/img/aboutImg.jpg" alt="">
         </div>
         <div class="widthFull">태그</div>
         <div class="widthFull">조회수</div>
@@ -19,7 +19,7 @@
     </div>
     <div class='boxSize'>
         <div class="imgLimit">
-            <img class='imgConfig'src="public/img/aboutImg.jpg" alt="">
+            <img class='imgConfig'src="/img/aboutImg.jpg" alt="">
         </div>
         <div class="widthFull">태그</div>
         <div class="widthFull">조회수</div>
@@ -28,7 +28,7 @@
     </div>
     <div class='boxSize'>
         <div class="imgLimit">
-            <img class='imgConfig'src="public/img/aboutImg.jpg" alt="">
+            <img class='imgConfig'src="/img/aboutImg.jpg" alt="">
         </div>
         <div class="widthFull">태그</div>
         <div class="widthFull">조회수</div>
@@ -37,7 +37,7 @@
     </div>
     <div class='boxSize'>
         <div class="imgLimit">
-            <img class='imgConfig'src="public/img/aboutImg.jpg" alt="">
+            <img class='imgConfig'src="/img/aboutImg.jpg" alt="">
         </div>
         <div class="widthFull">태그</div>
         <div class="widthFull">조회수</div>
@@ -46,7 +46,7 @@
     </div>
     <div class='boxSize'>
         <div class="imgLimit">
-            <img class='imgConfig'src="public/img/aboutImg.jpg" alt="">
+            <img class='imgConfig'src="/img/aboutImg.jpg" alt="">
         </div>
         <div class="widthFull">태그</div>
         <div class="widthFull">조회수</div>
@@ -56,7 +56,7 @@
 
     <div class='boxSize'>
         <div class="imgLimit">
-            <img class='imgConfig'src="public/img/aboutImg.jpg" alt="">
+            <img class='imgConfig'src="/img/aboutImg.jpg" alt="">
         </div>
         <div class="widthFull">태그</div>
         <div class="widthFull">조회수</div>
@@ -65,7 +65,7 @@
     </div>
     <div class='boxSize'>
         <div class="imgLimit">
-            <img class='imgConfig'src="public/img/aboutImg.jpg" alt="">
+            <img class='imgConfig'src="/img/aboutImg.jpg" alt="">
         </div>
         <div class="widthFull">태그</div>
         <div class="widthFull">조회수</div>
@@ -74,7 +74,7 @@
     </div>
     <div class='boxSize'>
         <div class="imgLimit">
-            <img class='imgConfig'src="public/img/aboutImg.jpg" alt="">
+            <img class='imgConfig'src="/img/aboutImg.jpg" alt="">
         </div>
         <div class="widthFull">태그</div>
         <div class="widthFull">조회수</div>
@@ -83,7 +83,7 @@
     </div>
     <div class='boxSize'>
         <div class="imgLimit">
-            <img class='imgConfig'src="public/img/aboutImg.jpg" alt="">
+            <img class='imgConfig'src="/img/aboutImg.jpg" alt="">
         </div>
         <div class="widthFull">태그</div>
         <div class="widthFull">조회수</div>
@@ -92,7 +92,7 @@
     </div>
     <div class='boxSize'>
         <div class="imgLimit">
-            <img class='imgConfig'src="public/img/aboutImg.jpg" alt="">
+            <img class='imgConfig'src="/img/aboutImg.jpg" alt="">
         </div>
         <div class="widthFull">태그</div>
         <div class="widthFull">조회수</div>
@@ -101,7 +101,7 @@
     </div>
     <div class='boxSize'>
         <div class="imgLimit">
-            <img class='imgConfig'src="public/img/aboutImg.jpg" alt="">
+            <img class='imgConfig'src="/img/aboutImg.jpg" alt="">
         </div>
         <div class="widthFull">태그</div>
         <div class="widthFull">조회수</div>
